complete section app

--- a/index.html
+++ b/index.html
@@ -674,7 +674,17 @@
     </div>
 </section>
 <section class="section-app">
-    <div class="section-app__text"></div>
+    <div class="section-app__text">
+        <h2 class="header-preview__text-title section-app__text-header">Download  Our <span class="second-color">Mobile App</span></h2>
+        <p class="section-app__text-subtitle">
+            It's all at your fingertips -- the restaurants you love. Find the right food to suit your mood, and make the first bite last. Go ahead, download app and get 50% discount
+        </p>
+        <div class="section-app__text-links">
+            <a href="https://apps.apple.com/ca/app/uber-eats-food-delivery/id1058959277" class="section-app__text-links__link" target="_blank"><img src="./images/mobileApp/AppStore.png" alt="Appstore" target="_blank"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.ubercab.eats&hl=en_US" class="section-app__text-links__link" target="_blank"><img src="./images/mobileApp/GooglePlay.png" alt="Google Store" target="_blank"></a>
+        </div>
+    </div>
+    
     <div class="section-app__screenshots">
         <img class="screenshot-1" src="./images/mobileApp/App-Mobile-Left.png" alt="section-app">
         <img class="screenshot-2" src="./images/mobileApp/App-Mobile-Center.png" alt="section-app">
@@ -682,7 +692,9 @@
 
     </div>
 </section>
-<section class="section-feedback"></section>
+<section class="section-feedback">
+    <h2 class="header-preview__text-title section-feedback__title">What Our Client Are <span class="second-color">Saying </span></h2>
+</section>
 <section class="section-subscribe"></section>
 <footer class="footer"></footer>
 
