add section with feedback and slider generated from array and slider changing every 10seconds

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./styles/3.section-stay-at-home/stay-at-home.css">
     <link rel="stylesheet" href="./styles/4.section-top-food/section-top-food.css">
     <link rel="stylesheet" href="./styles/5.section-app/section-app.css">
+    <link rel="stylesheet" href="./styles/6.section-feedback/section-feedback.css">
 
 
     <title>EFood</title>
@@ -694,6 +695,7 @@
 </section>
 <section class="section-feedback">
     <h2 class="header-preview__text-title section-feedback__title">What Our Client Are <span class="second-color">Saying </span></h2>
+    <div class="section-feedback></div>
 </section>
 <section class="section-subscribe"></section>
 <footer class="footer"></footer>
@@ -701,6 +703,7 @@
 <script src="./js/jQuery.js"></script>
 <script src="./js/slider.js"></script>
 <script src="./js/popular.js"></script>
+<script src="./js/feedback.js"></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
 
