complete section with feedback

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="./styles/5.section-app/section-app.css">
     <link rel="stylesheet" href="./styles/6.section-feedback/section-feedback.css">
 
+    //Font
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
 
     <title>EFood</title>
 </head>
@@ -695,9 +698,9 @@
 </section>
 <section class="section-feedback">
     <h2 class="header-preview__text-title section-feedback__title">What Our Client Are <span class="second-color">Saying </span></h2>
-    <div class="section-feedback></div>
 </section>
-<section class="section-subscribe"></section>
+<section class="section-subscribe">
+</section>
 <footer class="footer"></footer>
 
 <script src="./js/jQuery.js"></script>
@@ -709,3 +712,4 @@
 
 </body>
 </html>
+`
