complete feedback section and complete subscribe section. Add js for send to server email

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="./styles/7.section-subsribe/section-sibscribe.css">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./styles/root/0.root.css"/>
@@ -700,6 +701,22 @@
     <h2 class="header-preview__text-title section-feedback__title">What Our Client Are <span class="second-color">Saying </span></h2>
 </section>
 <section class="section-subscribe">
+    <h3 class="section-subscribe__title">
+        Subscribe to get the Latest Offer
+    </h3>
+    <p class="section-subscribe__subtitle">
+        Get our daily updates by subscribing to our newspaper, please drop your email below
+    </p>
+    <div class="section-subscribe__mail-box">
+        <input type="email" class="section-subscribe__mail-box__input" placeholder="Enter your email address" required>
+        <button type="button" class="btn section-subscribe__mail-box__button" id="subscribeButton">
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
+                <path d="M10.525 14.3001C10.28 14.3001 10.0538 14.1616 9.94328 13.9406L8.01408 10.0822C7.90813 9.87034 7.92633 9.61684 8.06088 9.42119L11.175 5.20009L6.95328 8.31359C6.75763 8.44879 6.50413 8.46569 6.29223 8.36039L2.43448 6.43184C2.20308 6.31549 2.06203 6.07304 2.07633 5.81434C2.08998 5.55564 2.25703 5.32944 2.50013 5.24039L14.8501 0.690388C15.0874 0.603938 15.3545 0.660488 15.5346 0.840538C15.714 1.01929 15.7725 1.28709 15.6847 1.52499L11.1347 13.875C11.045 14.1181 10.8195 14.2851 10.5608 14.2988C10.5491 14.2994 10.5367 14.3001 10.525 14.3001Z" fill="white"/>
+              </svg>
+            Subscribe
+        </button>
+    </div>
+    
 </section>
 <footer class="footer"></footer>
 
@@ -707,7 +724,7 @@
 <script src="./js/slider.js"></script>
 <script src="./js/popular.js"></script>
 <script src="./js/feedback.js"></script>
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="./js/subsrcibe-mail.js"></script>
 
 
 </body>
