--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     <!-- Font -->
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
-    <link rel="stylesheet" type="text/css" href="path-to-slick-carousel/slick.css"/>
-<link rel="stylesheet" type="text/css" href="path-to-slick-carousel/slick-theme.css"/>
-<script type="text/javascript" src="path-to-slick-carousel/slick.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    
 
 
 
@@ -323,8 +325,8 @@
             <div class="food-box_food-name">Set Menu</div>
         </div>
     </div>
-    <div id="carousel">
-    <ul id="products-container" class="flip-items"></ul>
+    
+    <div id="products-container"></div>
 </div>
 </section>
 <section class="section-stayAtHome">
